...
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="@+id/foodAnimation"
            app:layout_constraintStart_toStartOf="@+id/foodAnimation"
            app:layout_constraintTop_toBottomOf="@+id/foodAnimation" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipesRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
...
